2018-06-29  Yury Aliaev  <mutab0r@rambler.ru>
	* app/sample-editor.c: Better fiddling with sounds in sample editor.
	* app/keys.c, app/track-editor.c: The keyboard control for channels'
	muting/unmuting is made simplier, some more default keybindings are
	added.

2018-06-28  Yury Aliaev  <mutab0r@rambler.ru>
	* app/file-operations.c, app/instrument-editor.c, app/module-info.c,
	app/track-editor.[ch]: Polyphonic try mode is now also available at
	the file, instrument editor and module info pages.

2018-06-26  Yury Aliaev  <mutab0r@rambler.ru>
	* app/audio.c, app/gui-settings.[ch], app/gui.[ch], app/midi-09x.c,
	app/track-editor.c, app/xm-player.[ch]: Polyphonic playing in try
	(out of editing) mode (optional).

2018-06-25  Yury Aliaev  <mutab0r@rambler.ru>
	* app/track-editor.c, app/xm-player.c: When out of editing mode,
	note keys' pressing produces sounds independent on the cursor
	position (note/instr/eff column, muted channel).

2018-06-18  Yury Aliaev  <mutab0r@rambler.ru>
	* app/envelope-box.c, app/extspinbutton.[ch], app/gui-settings.c,
	app/gui-subs.[ch], app/gui.c, app/instrument-editor.c,
	app/midi-settings-09x.c, app/playlist.c, app/sample-editor.c,
	app/transposition.c: Extended spin button code is optimized (an
	attempt to improve the interactivity). But this seems not to be the
	cause...

2018-06-13  Yury Aliaev  <mutab0r@rambler.ru>
	* app/cheat-sheet.c, app/clavier.c, app/gui-settings.c, app/gui-subs.c,
	app/gui.c, app/playlist.c, app/sample-display.c, app/sample-editor.c,
	app/scope-group.c, app/track-editor.c, app/tracker.c: Many 
	deprecated symbols are removed (I hope, most of them);
	* app/st-subs.c, app/drivers/jack-output.c: code cleanup (unneeded 
	headers);
	* app/clock.c, app/scalablepic.c: memory leaks are fixed;
	* app/tracer.c: tracer interface is now consistent with the 
	previous fix;
	* app/cheat-sheet.c, app/envelope-box.c, app/gui.c, GBS files: the 
	uniform data dir entry is implemented.
