@@ -1,3 +1,9 @@
+2018-07-16  Yury Aliaev  <mutab0r@rambler.ru>
+	* app/audio.c, app/audioconfig.c, app/gui.c, app/main.c,
+	app/menubar.c, app/sample-editor.c, app/drivers/file-output.c,
+	configure.in: The version of the audiofile library is now being
+	determined in the compilation time without runtime hacks.
+
 2018-06-29  Yury Aliaev  <mutab0r@rambler.ru>
 	* app/sample-editor.c: Better fiddling with sounds in sample editor.
 	* app/keys.c, app/track-editor.c: The keyboard control for channels'
